--- a/saybook/templates/quotes.html
+++ b/saybook/templates/quotes.html
@@ -1,6 +1,8 @@
 {% extends 'index.html' %}
 {% block content %}
 <section class="normal">
+  
+  <blockquote><a class="cent"">QUOTE OF THE DAY</a></blockquote>
     <div>
       <blockquote>
         <p id="quote">
