--- a/saybook/static/css/style.css
+++ b/saybook/static/css/style.css
@@ -29,9 +29,11 @@ button {
 	border: none;
 	height: 32px;
 	font-family: 'Oswald', sans-serif;
+  cursor: pointer;
 }
 p {
 	margin: 20px 0;
+  font-weight: 100;
 }
 
 #wrapper {
@@ -109,6 +111,7 @@ h1 {
 	color: #7e7e7e;
 	font: 50px 'Oswald', sans-serif;
 	padding: 10px 20px 10px 20px;  
+  margin-top: 2px; margin-bottom: 2px;
 }
 
 h4{
@@ -116,6 +119,7 @@ h4{
   font-size: 16px;
   font-weight: lighter;
   font-family: 'Calibri', serif;
+  font-weight: 500;
 }
 
 .head{
@@ -133,6 +137,12 @@ section {
 }
 .normal{
   margin-left: 0px;
+}
+.cent{
+	color: #fff;
+  font-family: 'Oswald', sans-serif;
+	font-weight: 300;
+  text-decoration: none;
 }
 
 .aside-menu li {
@@ -178,8 +188,11 @@ blockquote {
 	background-size: 500% 500%;
 	animation: gradient 10s ease infinite;
 	padding: 10px 20px;
+  font-size: 30px;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 blockquote p {
@@ -241,8 +254,6 @@ footer {
 
   bottom: 0;
   left: 0;
-
-
 }
 
 
@@ -284,7 +295,7 @@ footer p {
 #social {
 	float: left;
 	margin-left: 20px;
-	width: 130px;
+	width: 180px;
 }
 
 .social-icon {
@@ -296,8 +307,8 @@ footer p {
 }
 
 .social-icon-small  {
-	width: 16px;
-	height: 16px;
+	width: 32px;
+	height: 32px;
 	background: url(../images/social-small.png) no-repeat;
 	display: inline-block;
 	margin: 5px 6px 0 0;
@@ -415,16 +426,17 @@ ul.list-articles li {
 p.link-read-post {
 	text-align: right;
 }
+
+
 p.link-read-post a {
 	padding: 10px;
 	min-width: 100px;
-	background: #333671;
+	background: #29c5e6;
 	color: #fff;
+  font-family: 'Oswald', sans-serif;
+	font-weight: 300;
 	text-decoration: none;
 }
-
-
-
 
 .wrapper1 {
   width: 400px;
@@ -434,13 +446,19 @@ p.link-read-post a {
   left: 50%;
 }
 .container {
-  width: 100%;
-  background-color: #f43543;
+  width: 40%;
+  background: linear-gradient(-45deg, #29c5e6, #7769dd34, #29c5e6, #00ffc33d);
+	background-size: 500% 500%;
+	animation: gradient 10s ease infinite;
   padding: 50px 40px;
   box-shadow: 0 20px 65px rgba(87, 11, 16, 0.5);
   position: relative;
   border-radius: 8px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: #000000;
+
 }
 .container:after {
   content: "";
@@ -466,10 +484,126 @@ p.link-read-post a {
 .container button {
   background-color: #ffffff;
   border: none;
-  padding: 5px 40px;
+  padding: 5px 40px 35px 40px;
   border-radius: 5px;
   font-size: 18px;
-  font-weight: 600;
-  color: #f43543;
+  font-weight: 400;
+  color: #030303;
   cursor: pointer;
 }
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900);
+
+//import compass
+@import "compass";
+
+//colors
+$primary-color   : #FF512F;
+$secondary-color : #333;
+$form-bg         : #fff;
+
+.contact-form{
+    margin-top: 30px;
+  
+    .input-block{
+        background-color: rgba(white, .8);
+        border: solid 1px $primary-color;
+        width: 100%;
+        height: 60px;
+        padding: 25px;
+        position: relative;
+        margin-bottom: 20px;
+        @include transition(all 0.3s ease-out);
+        &.focus{
+            background-color: $form-bg;
+            border: solid 1px darken($primary-color, 10%);
+        }
+        &.textarea{
+            height: auto;
+            .form-control{
+                height: auto;
+                resize: none;
+            }
+        }
+        label{
+            position: absolute;
+            left: 25px;
+            top: 25px;
+            display: block;
+            margin: 0;
+            font-weight: 300;
+            z-index: 1;
+            color: $secondary-color;
+            font-size: 18px;
+            line-height: 10px;
+        }
+        .form-control{
+            background-color: transparent;
+            padding: 0;
+            border: none;
+            @include border-radius(2);
+            @include box-shadow(none);
+            height: auto;
+            position: relative;
+            z-index: 2;
+            font-size: 18px;
+            color: $secondary-color;
+        }
+        .form-control:focus{
+            label{
+                top: 0;
+            }
+        }
+    }
+    .square-button{
+        background-color: rgba(white, .8);
+        color: darken($primary-color, 10%);
+        font-size: 26px;
+        text-transform: uppercase;
+        font-weight: 700;
+        text-align: center;
+        @include border-radius(2px);
+        @include transition(all 0.3s ease);
+        padding: 0 60px;
+        height: 60px;
+        border: none;
+        width: 100%;
+        &:hover,
+        &:focus{
+            background-color: white;
+        }
+    }
+}
+
+.header1{
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("https://trendymen.ru/images/article2/117069/image15_117069.jpg");
+  background-size: cover;
+  background-position:center center ;
+  position: relative;
+  background-attachment: fixed;
+  left: 0;
+  top: 0;
+  .mask{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(#000,.8);
+
+    .text-align{
+      position: relative;
+      display: inline-block;
+      padding: 0px 20px;
+      text-align: center;
+      left: 50%;
+      top:50%;
+      transform: translate(-50%,-50%);
+      -webkit-transform:  translate(-50%,-50%);
+    }
+  }
+
