--- a/saybook/templates/addpage.html
+++ b/saybook/templates/addpage.html
@@ -1,19 +1,18 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<h1>{{title}}</h1>
-
+<section class="normal">
+<div class="container">
+<h1 class="head"> {{title}} </h1>
 <form action="{% url 'add_page' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-error">{{ form.non_field_errors }}</div>
-
 {% for f in form %}
-<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<h4><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</h4>
 <div class="form-error">{{ f.errors }}</div>
 {% endfor %}
-
-
-
-
-
+  <button type="submit">Добавить</button>
+</form>
+</div>
+</section>
 {% endblock %}
