--- a/saybook/templates/footer.html
+++ b/saybook/templates/footer.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <footer>
 	<div id="footer">
 		<div id="twitter">
@@ -12,30 +12,30 @@
 		<div id="sitemap">
 	<h3>SITEMAP</h3>
 	<div>
-		<a href="/home/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/services/">Services</a>
+		<a href="{% url 'home' %}">Home</a>
+		<a href="{% url 'about_us' %}">About</a>
+		<a href="{% url 'home' %}">Services</a>
 	</div>
 	<div>
-		<a href="/partners/">Partners</a>
-		<a href="/customers/">Support</a>
-		<a href="/contact/">Contact</a>
+		<a href="{% url 'home' %}">Partners</a>
+		<a href="{% url 'home' %}">Support</a>
+		<a href="{% url 'contact' %}">Contact</a>
 	</div>
 </div>
 		<div id="social">
 	<h3>SOCIAL NETWORKS</h3>
-	<a href="http://twitter.com/" class="social-icon twitter"></a>
-	<a href="http://facebook.com/" class="social-icon facebook"></a>
-	<a href="http://plus.google.com/" class="social-icon google-plus"></a>
-	<a href="http://vimeo.com/" class="social-icon-small vimeo"></a>
-	<a href="http://youtube.com/" class="social-icon-small youtube"></a>
-	<a href="http://flickr.com/" class="social-icon-small flickr"></a>
-	<a href="http://instagram.com/" class="social-icon-small instagram"></a>
-	<a href="/rss/" class="social-icon-small rss"></a>
+	<a href="http://vk.com/" class="social-icon twitter"><img src="{% static 'images/social/vk.png' %}" alt="vk logo"></a>
+	<a href="http://facebook.com/" class="social-icon facebook"><img src="{% static 'images/social/facebook.png' %}" alt="facebook logo"></a>
+	<a href="http://plus.google.com/" class="social-icon google-plus"><img src="{% static 'images/social/g_plus.png' %}" alt="g_plus logo"></a>
+	<a href="http://vimeo.com/" class="social-icon-small vimeo"><img src="{% static 'images/social/vimeo.png' %}" alt="vimeo logo"></a>
+	<a href="http://youtube.com/" class="social-icon-small youtube"><img src="{% static 'images/social/youtube.png' %}" alt="youtube logo"></a>
+	<a href="http://flickr.com/" class="social-icon-small flickr"><img src="{% static 'images/social/flickr.png' %}" alt="flickr logo"></a>
+	<a href="http://instagram.com/" class="social-icon-small instagram"><img src="{% static 'images/social/insta.png' %}" alt="instagram logo"</a>
+	<a href="/rss/" class="social-icon-small rss"><img src="{% static 'images/social/rss.png' %}" alt="rss logo"</a>
 </div>
 		<div id="footer-logo">
-	<a href="/"><img src="/favicon-32x32.png" alt="Whitesquare logo"></a>
-	<p>Copyright © 2012 Whitesquare. A <a href="http://pcklab.com">pcklab</a> creation</p>
+	<a href="/"><img src="{% static 'images/favicon-32x32.png' %}" alt="Saybook logo"></a>
+	<p>Copyright © 2012 SayBook. A <a href="http://pcklab.com">pcklab</a> creation</p>
 </div>
 	</div>
 </footer>
