--- a/saybook/templates/registration/register.html
+++ b/saybook/templates/registration/register.html
@@ -2,20 +2,24 @@
 
 {% block content %}
 
+
 <section class="normal">
-  <div id="heading">
- <h1 class="head">{{title}}</h1>
-  </div>
+  <div class="container">
 <form method="post">
     {% csrf_token %}
-
+<h1 class="head"> REGISTRATION </h1>
 {% for f in form %}
-<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+  
+<h4>
+  <label class="form-label" for="{{ f.id_for_label }}">
+    {{f.label}}: </label>{{ f }}
+</h4>
 <div class="form-error">{{ f.errors }}</div>
 {% endfor %}
 
-    <button type="submit">Регистрация</button>
+    <button type="submit"> Registration </button>
 </form> 
+  </div>
 </section>
 
 
